--- a/webapp/templates/chat.html
+++ b/webapp/templates/chat.html
@@ -30,7 +30,7 @@
 									<span class="online_icon"></span>
 								</div>
 								<div class="user_info">
-									<span>ChatBot</span>
+									<span>Dietitian ChatBot</span>
 									<p>How can I help you with your diet?</p>
 								</div>
 							</div>
